syntax = "proto3";
package shopgrpc;

import "google/protobuf/timestamp.proto";


option go_package = "./shopgrpc";


enum Role {
  USER = 0;
  ADMIN = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1; 
  optional string role = 2;
  optional string token = 3;
  string message = 4;
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  Role role = 4;
  optional google.protobuf.Timestamp created_at = 6;
}

message SignUpResponse {
  int32 status = 1;
  string message = 2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
}